[package]
name = "prime_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
] }
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.26"
primes = "0.3.0"
serde_json = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
unescape = "0.1.0"
